fix update sale's sheep list